<resources>
    <!-- Universal strings -->
    <string name="app_name">Lawn Sense</string>
    <string name="app_name2">Garden Gang</string>
    <string name="action_settings">Settings</string>
    <string name="garden_gang_title">Lawn Sense</string>
    <!-- Not used ATM -->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Options</string>
    <string name="third_fragment_label">My Garden</string>
    <string name="fourth_fragment_label">Database</string>
    <string name="fifth_fragment_label">Account</string>
    <string name="eighth_fragment_label">Bluetooth</string>
    <string name="ninth_fragment_label">Weather</string>
    <!-- These fragments are nested in the third fragment "My Garden" -->
    <string name="sixth_fragment_label">Data</string>
    <string name="seventh_fragment_label">Moisture Statistics</string>
    <string name="tenth_fragment_label">pH Statistics</string>
    <string name="eleventh_fragment_label">Temperature Statistics</string>
    <string name="sda_label">Select Device Activity</string>
    <!-- Strings used for objects in the first fragment "Home" -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for objects in the second fragment "Options" -->
    <string name="my_garden">My Garden</string>
    <string name="database">Database</string>
    <string name="account">Account</string>
    <!-- Strings used for objects in the third fragment "My Garden" -->
    <!-- Plant names will be pulled from the PFAF database -->
    <string name="add">Add</string>
    <string name="data">Data</string>
    <string name="stats">Statistics</string>
    <string name="plant_ln">Plant Latin Name</string>
    <string name="plant_cn">Plant Common Name</string>
    <string name="condition">Plant Condition</string>
    <string name="optimal">Optimal</string>
    <string name="sub_optimal">Sub Optimal</string>
    <string name="critical">Critical</string>
    <!-- Strings used for objects in the fourth fragment "Database" -->
    <!-- #/Name used as a place holder for the page/folder/plant # or name that will be used -->
    <string name="search">Search Common Name of Plant</string>
    <string name="folder">Page/Folder # or Name</string>
    <string name="name_plant">Name of Plant</string>
    <!-- Strings used for objects in the fifth fragment "Account" -->
    <!-- Name used as a place holder for the user name that will be used -->
    <string name="name_account">Garden</string>
    <string name="pass_account">Gang</string>
    <!-- Strings used for objects in the sixth fragment "Data" -->
    <!-- # used as a place holder for the sensor number that will be used -->
    <string name="sensor1">Sensor 1</string>
    <string name="sensor2">Sensor 2</string>
    <string name="temp_F">Temperature (F)</string>
    <string name="temp_C">    Temperature (C)</string>
    <string name="pH">    pH</string>
    <string name="humidity">Humidity (%)</string>
    <string name="moist">    Moisture</string>
    <string name="light_p">Light Exposure (%)</string>
    <string name="light_b">Light Exposure</string>
    <!-- "Average" string used for objects in the fourth and seventh fragments "Statistics" -->
    <string name="avg">Sensor Average</string>
    <string name="avg_temp">Average Temperature Graph</string>
    <string name="avg_sun">Average Light Exposure Graph</string>
    <string name="avg_moist">Average Moisture Graph</string>
    <string name="avg_pH">Average pH Graph</string>
    <!-- String used for objects in the eighth fragment "Weather" -->
    <string name="weather">Weather</string>
    <string name="temp">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <!-- "Average" string used for objects in the ninth fragment "Bluetooth" -->
    <string name="bluetooth">Bluetooth</string>
    <string name="con">Connect</string>

</resources>